# build-system-pkgs

./: .mergify.yml  README.md  build-systems.toml  default.nix  flake.nix  overlay.nix  pyproject.toml  renovate.json  shell.nix
.github/workflows/: nix-github-actions.yml
npins/: sources.json
