[project]
name = "pyproject-nix-build-system-pkgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
  "babel",
  "build",
  "calver",
  "cffi",
  "cmake",
  "cython",
  "deprecation",
  "distro",
  "dunamai",
  "editables",
  "exceptiongroup",
  "flit-core",
  "flit-scm",
  "hatch-fancy-pypi-readme",
  "hatch-jupyter-builder",
  "hatch-nodejs-version",
  "hatch-requirements-txt",
  "hatch-vcs",
  "hatchling",
  "importlib-metadata",
  "installer",
  "jinja2[i18n]",
  "jupyter-packaging",
  "libcst",
  "manifestoo-core",
  "markupsafe",
  "maturin",
  "meson[ninja,progress]",
  "meson-python",
  "ninja",
  "numpy",
  "packaging",
  "pathspec",
  "pbr",
  "pdm-backend",
  "pdm-pep517",
  "pip",
  "pkgconfig",
  "pluggy",
  "poetry-core",
  "poetry-dynamic-versioning",
  "pybind11",
  "pycparser",
  "pyproject-hooks",
  "pyproject-metadata",
  "pytest-runner",
  "scikit-build",
  "scikit-build-core",
  "semantic-version",
  "setuptools",
  "setuptools-git",
  "setuptools-rust",
  "setuptools-scm[rich]",
  "toml",
  "tomli",
  "tomli-w",
  "tomlkit",
  "trove-classifiers",
  "typing-extensions",
  "versioneer[toml]",
  "wheel",
  "whool",
  "zipp",
  "plux",
  "uv-build",
]

[tool.uv]
no-build-package = [
  # Not in nixpkgs and depends on rust for sdist build.
  # Force wheel usage.
  "uv-build"
]
