[project]
name = "pyproject-nix-build-system-pkgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
  "babel",
  "build",
  "calver",
  "cffi",
  "cmake",
  "cython",
  "deprecation",
  "distro",
  "dunamai",
  "editables",
  "exceptiongroup",
  "flit-core",
  "flit-scm",
  "hatch-fancy-pypi-readme",
  "hatch-jupyter-builder",
  "hatch-nodejs-version",
  "hatch-requirements-txt",
  "hatch-vcs",
  "hatchling",
  "importlib-metadata",
  "installer",
  "jinja2[i18n]",
  "jupyter-packaging",
  "libcst",
  "manifestoo-core",
  "markupsafe",
  "maturin",
  "meson[ninja,progress]",
  "meson-python",
  "ninja",
  "numpy",
  "packaging",
  "pathspec",
  "pbr",
  "pdm-backend",
  "pdm-pep517",
  "pip",
  "pkgconfig",
  "pluggy",
  "poetry-core",
  "poetry-dynamic-versioning",
  "py-generator-build-backend",
  "pybind11",
  "pycparser",
  "pyproject-hooks",
  "pyproject-metadata",
  "pytest-runner",
  "scikit-build",
  "scikit-build-core",
  "semantic-version",
  "setuptools",
  "setuptools-git",
  "setuptools-rust",
  "setuptools-scm[rich]",
  "toml",
  "tomli",
  "tomli-w",
  "tomlkit",
  "trove-classifiers",
  "typing-extensions",
  "versioneer[toml]",
  "wheel",
  "whool",
  "zipp",
  "plux",
  "uv-build",
  "hatch-protobuf",
  "uv-dynamic-versioning",
  "py-build-cmake",
  "extension-helpers",
]

[tool.uv]
no-build-package = [
  # Not in nixpkgs and depends on rust for sdist build.
  # Force wheel usage.
  "uv-build"
]

[tool.uv.extra-build-dependencies]
annotated-types = [
    "hatchling",
]
babel = [
    "setuptools",
]
build = [
    "flit-core",
]
calver = [
    "setuptools",
]
cffi = [
    "setuptools",
]
click = [
    "flit-core",
]
cython = [
    "setuptools",
]
deprecation = [
    "setuptools",
]
distlib = [
    "setuptools",
]
distro = [
    "setuptools",
]
dunamai = [
    "poetry-core",
]
editables = [
    "flit-core",
]
exceptiongroup = [
    "flit-core",
    "flit-scm",
]
extension-helpers = [
    "setuptools",
]
expandvars = [
    "hatchling",
]
grpcio = [
    "setuptools",
]
grpcio-tools = [
    "setuptools",
]
hatch-fancy-pypi-readme = [
    "hatchling",
]
hatch-jupyter-builder = [
    "hatchling",
]
hatch-nodejs-version = [
    "hatchling",
]
hatch-protobuf = [
    "hatchling",
    "hatch-vcs",
]
hatch-requirements-txt = [
    "hatchling",
]
hatch-vcs = [
    "hatchling",
]
importlib-metadata = [
    "setuptools",
    "setuptools-scm",
]
installer = [
    "flit-core",
]
jinja2 = [
    "flit-core",
]
jupyter-packaging = [
    "hatchling",
]
lark = [
    "setuptools",
]
libcst = [
    "setuptools",
    "setuptools-rust",
]
manifestoo-core = [
    "hatch-vcs",
    "hatchling",
]
markdown-it-py = [
    "flit-core",
]
markupsafe = [
    "setuptools",
]
mdurl = [
    "flit-core",
]
meson = [
    "setuptools",
    "wheel",
]
meson-python = [
    "meson",
    "ninja",
    "pyproject-metadata",
    "tomli",
]
ninja = [
    "scikit-build",
    "setuptools",
    "setuptools-scm",
]
numpy = [
    "cython",
    "meson-python",
    "ninja",
]
oldest-supported-numpy = [
    "setuptools",
]
packaging = [
    "flit-core",
]
pathspec = [
    "flit-core",
]
pbr = [
    "setuptools",
]
pip = [
    "flit-core",
]
pkgconfig = [
    "poetry-core",
]
platformdirs = [
    "hatch-vcs",
    "hatchling",
]
pluggy = [
    "setuptools",
    "setuptools-scm",
]
plux = [
    "hatchling",
    "hatch-vcs",
]
poetry-dynamic-versioning = [
    "poetry-core",
]
protobuf = [
    "setuptools",
]
py-build-cmake = [
    "flit-core",
    "distlib",
    "pyproject-metadata",
    "lark",
    "tomli",
]
py-generator-build-backend = [
    "hatchling",
]
pybind11 = [
    "scikit-build-core",
]
pycparser = [
    "setuptools",
]
pydantic = [
    "hatchling",
    "hatch-fancy-pypi-readme",
]
pydantic-core = [
    "maturin",
    "typing-extensions",
]
pygments = [
    "hatchling",
]
pyproject-hooks = [
    "flit-core",
]
pyproject-metadata = [
    "flit-core",
]
pytest-runner = [
    "setuptools",
    "setuptools-scm",
]
pyyaml = [
    "setuptools",
]
pyyaml-ft = [
    "setuptools",
]
rich = [
    "poetry-core",
]
scikit-build = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]
scikit-build-core = [
    "hatch-vcs",
    "hatchling",
]
semantic-version = [
    "setuptools",
]
setuptools-git = [
    "setuptools",
]
setuptools-rust = [
    "setuptools",
    "setuptools-scm",
]
setuptools-scm = [
    "setuptools",
    "tomli",
]
toml = [
    "setuptools",
]
tomli = [
    "flit-core",
]
tomli-w = [
    "flit-core",
]
tomlkit = [
    "poetry-core",
]
tqdm = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]
trove-classifiers = [
    "calver",
    "setuptools",
]
typing-extensions = [
    "flit-core",
]
typing-inspection = [
    "hatchling",
]
uv-dynamic-versioning = [
    "hatchling",
]
vcs-versioning = [
    "setuptools",
]
versioneer = [
    "setuptools",
]
wheel = [
    "flit-core",
]
whool = [
    "hatch-vcs",
    "hatchling",
]
zipp = [
    "setuptools",
    "setuptools-scm",
]
